--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean-build": "rimraf build",
     "copy-files-web": "cpy app/favicon.ico build",
     "clean-and-copy-web": "npm run clean-build && npm run copy-files-web",
-    "build-web": "npm run clean-and-copy-web && webpack --env.production --config webpack/web/production.js",
+    "build-web": "npm dedupe && npm run clean-and-copy-web && webpack --env.production --config webpack/web/production.js",
     "dev-web": "cross-env NODE_ENV=development PORT=8080 webpack-dev-server --progress --hot --inline --content-base dist --config=webpack/web/development.js",
     "copy-files": "cpy app/app.html app/package.json build",
     "clean-and-copy": "npm run clean-build && npm run copy-files",
@@ -21,7 +21,7 @@
     "hot-server": "cross-env NODE_ENV=development node --max_old_space_size=2096 -r babel-register server.js ",
     "build:main": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --env.production --config webpack/desktop/electron.js --profile",
     "build:renderer": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack/desktop/production.js --profile",
-    "build-desktop": "npm run clean-and-copy && npm run build:main && npm run build:renderer",
+    "build-desktop": "npm dedupe && npm run clean-and-copy && npm run build:main && npm run build:renderer",
     "start": "cross-env NODE_ENV=production electron ./build/",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./app/main.development",
     "preinstall": "mkdir -p build",
